vlib/v/checker/tests/array_init_with_len_cap_err.vv
_ = []int{len: -1}
_ = []int{cap: -1}
